--- a/pom.xml
+++ b/pom.xml
@@ -362,6 +362,13 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+	<dependency>
+            <groupId>org.junit</groupId>
+            <artifactId>junit-bom</artifactId>
+            <version>${junit.version}</version>
+            <type>pom</type>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>com.rollbar</groupId>
             <artifactId>rollbar-logback</artifactId>
