--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
         <rollbar.version>2.0.0</rollbar.version>
         <jsoup.version>1.19.1</jsoup.version>
         <hibernate.version>6.6.13.Final</hibernate.version>
-        <junit.version>5.12.1</junit.version>
+        <junitapi.version>5.12.1</junitapi.version>
         <opensearch.version>1.6.2</opensearch.version>
         <shedlock.version>6.3.1</shedlock.version>
         <spring-boot.version>3.4.4</spring-boot.version>
@@ -55,9 +55,16 @@
         <spring.version>6.4.4</spring.version>
         <maven-replacer.version>1.5.3</maven-replacer.version>
         <compiler.version>3.14.0</compiler.version>
+        <cucumber.version>7.22.0</cucumber.version>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-junit</artifactId>
+            <version>${cucumber.version}</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>org.ehcache</groupId>
             <artifactId>ehcache</artifactId>
@@ -356,16 +363,10 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-params</artifactId>
-            <version>${junit.version}</version>
-            <scope>test</scope>
-        </dependency>
-	<dependency>
+	    <dependency>
             <groupId>org.junit</groupId>
             <artifactId>junit-bom</artifactId>
-            <version>${junit.version}</version>
+            <version>${junitapi.version}</version>
             <type>pom</type>
             <scope>test</scope>
         </dependency>
