--- a/.gitignore
+++ b/.gitignore
@@ -52,8 +52,8 @@ build/
 # ODT lock files
 **/.~lock*
 
-# Local secrets
-/src/main/resources/local-env-local-pg.yml
+### Local config ###
+/src/main/resources/application-local.yml
 
 # Redis files
 dump.rdb
