Adds config to support local SQL dump powering the app locally and in tests.  Adds h2 to power that

--- a/.gitignore
+++ b/.gitignore
@@ -55,5 +55,8 @@ build/
 ### Local config ###
 /src/main/resources/application-local.yml
 
+### Local DB ###
+/src/main/resources/data.sql
+
 # Redis files
 dump.rdb
