--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
         <maven-replacer.version>1.5.3</maven-replacer.version>
         <compiler.version>3.14.0</compiler.version>
         <cucumber.version>7.22.0</cucumber.version>
+        <h2.version>2.3.232</h2.version>
     </properties>
 
     <dependencies>
@@ -404,6 +405,12 @@
             <groupId>net.javacrumbs.shedlock</groupId>
             <artifactId>shedlock-provider-jdbc-template</artifactId>
             <version>${shedlock.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>${h2.version}</version>
+            <scope>runtime</scope>
         </dependency>
     </dependencies>
 
