--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -5,6 +5,11 @@ spring:
       resourceserver:
         jwt:
           jwk-set-uri: https://dummy.example.com
+  datasource:
+    url: jdbc:h2:mem:testdb;MODE=PostgreSQL;DATABASE_TO_LOWER=TRUE;DEFAULT_NULL_ORDERING=HIGH
+    username: sa
+    password: sa
+    driver-class-name: org.h2.Driver
 
 # Custom config items
 config:
