Core of scheduled task, executing at configured interval.  Need to build the service next

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -300,6 +300,10 @@ config:
     resolveUsersBySSO: true
     resolveBuyerUsersBySSO: true
 
+# Task scheduling configuration
+scheduling:
+  batchProcessing: PT3M
+
 ---
 spring:
   config:
