Implement a result cap on the queue contents fetch to ensure we never go over the rate limit

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -304,6 +304,10 @@ config:
 scheduling:
   batchProcessing: PT3M
 
+# Request batching configuration
+batching:
+  processLimit: 350
+
 ---
 spring:
   config:
