--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -39,6 +39,10 @@ caching:
   long:
     cacheLength: 3600
     heapSize: 500
+  # Longer cache - 24 hour, 500 entries
+  longer:
+    cacheLength: 86400
+    heapSize: 500
   # Agreements to be cached
   agreements: RM1557.13,RM1043.8,RM6187,RM1557.14
 
