NCAS 537 tests deprecated fixed

--- a/pom.xml
+++ b/pom.xml
@@ -613,6 +613,9 @@
                                 <useJakartaEe>true</useJakartaEe>
                                 <useSpringBoot3>true</useSpringBoot3>
                                 <discriminatorCaseSensitive>false</discriminatorCaseSensitive>
+                                <discriminatorPropertyName>type</discriminatorPropertyName>
+                                <generateAliasAsModel>true</generateAliasAsModel>
+                                <legacyDiscriminatorBehavior>false</legacyDiscriminatorBehavior>
                             </configOptions>
                         </configuration>
                     </execution>
