--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,8 @@
         <compiler.version>3.14.0</compiler.version>
         <cucumber.version>7.27.0</cucumber.version>
         <h2.version>2.3.232</h2.version>
-    </properties>
+        <org.mapstruct.version>1.6.3</org.mapstruct.version>
+        </properties>
 
     <dependencies>
         <dependency>
@@ -411,6 +412,16 @@
             <artifactId>h2</artifactId>
             <version>${h2.version}</version>
             <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.opensearch.gradle</groupId>
+            <artifactId>build-tools</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>${org.mapstruct.version}</version>
         </dependency>
     </dependencies>
 
