NCAS-645 - Refactoing Changes

--- a/pom.xml
+++ b/pom.xml
@@ -423,6 +423,11 @@
             <artifactId>mapstruct</artifactId>
             <version>${org.mapstruct.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>3.2.4</version>
+        </dependency>
     </dependencies>
 
     <build>
