--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         <maven.compiler.target>23</maven.compiler.target>
         <swagger-parser.version>2.1.34</swagger-parser.version>
         <guava.version>33.4.8-jre</guava.version>
-        <openapi-generator.version>5.2.1</openapi-generator.version>
+        <openapi-generator.version>5.3.0</openapi-generator.version>
         <hibernate-types.version>2.21.1</hibernate-types.version>
         <modelmapper.version>3.2.4</modelmapper.version>
         <simple-odf.version>0.9.0</simple-odf.version>
@@ -442,7 +442,7 @@
                             <skipValidateSpec>false</skipValidateSpec>
                             <strictSpec>true</strictSpec>
                             <languageSpecificPrimitives>OneOfstringinteger,OneOfstringnumberintegerobject,OneOfLinkedReleaseEmbeddedRelease,OneOfstringnumber,OneOfstringintegernumberboolean,OneOfnumberarray,OneOfLinkedRelease1,OneOfdateintegerboolean</languageSpecificPrimitives>
-                            <typeMappings>Error=uk.gov.crowncommercial.dts.scale.cat.model.ApiError,OneOfstringinteger=String,FileFormat=Object,OneOfstringnumberintegerobject=String,OneOfLinkedReleaseEmbeddedRelease=Object,OneOfstringnumber=String,OneOfstringintegernumberboolean=String,OneOfnumberarray=Object,OneOfLinkedRelease1=LinkedRelease1,TenderStatus1=TenderStatus,OneOfdateintegerboolean=String</typeMappings>
+                            <typeMappings>Error=uk.gov.crowncommercial.dts.scale.cat.model.ApiError,OneOfstringinteger=String,FileFormat=Object,OneOfstringnumberintegerobject=String,OneOfLinkedReleaseEmbeddedRelease=Object,OneOfstringnumber=String,OneOfstringintegernumberboolean=String,OneOfnumberarray=Object,OneOfLinkedRelease1=LinkedRelease1,TenderStatus1=TenderStatus,OneOfdateintegerboolean=String,PartyRole=String,PartyRole1=String,PartyRole_1=String</typeMappings>
                             <importMappings>Error=uk.gov.crowncommercial.dts.scale.cat.model.ApiError</importMappings>
                             <verbose>false</verbose>
                             <configOptions>
@@ -456,6 +456,7 @@
                                 <useJakartaEe>true</useJakartaEe>
                                 <useSpringBoot3>true</useSpringBoot3>
                                 <discriminatorCaseSensitive>false</discriminatorCaseSensitive>
+                                <useOneOfInterfaces>true</useOneOfInterfaces>
                             </configOptions>
                         </configuration>
                     </execution>
